# redis_practice

./: README.md  database.py  docker-compose.yml  hot_storage.py  main.py  parse_utils.py  persistence_storage.py  pyproject.toml  sql_dumper.py
